# challenge-qa-practica-2025

./: .env  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  db.py  main.py  models.py  repository.py  schemas.py
src/routes/v1/: __init__.py  devices.py  employees.py  enroll.py  punch.py
